--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,26 +35,14 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
+          pip install --no-cache-dir --no-binary :all: pynacl
           pip install ".[dev]"
-          pip install --no-cache-dir --force-reinstall --no-binary :all: pynacl
 
       - name: Lint
-        run: |
-          ruff check src tests
-          black --check src tests
-          mypy src
+        run: ruff check src tests && black --check src tests && mypy src
 
       - name: Unit tests
         run: pytest --cov=src --cov-report=xml
-
-      - name: Build PQ wheels
-        if: matrix.python-version == '3.13'
-        run: python tools/build_pq_wheels.py
-      - uses: actions/upload-artifact@v4
-        if: matrix.python-version == '3.13'
-        with:
-          name: pq-wheels
-          path: dist/*_pq*.whl
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v4
