--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,66 +1,39 @@
-# SPDX-License-Identifier: MIT
-# SPDX-FileCopyrightText: 2025 Zilant Prime Core contributors
-
 name: CI
 
 on:
   push:
-    branches: [main]
+    branches: [ main ]
   pull_request:
-
-permissions:
-  contents: read
-  actions: read
+    branches: [ main ]
 
 jobs:
-  build-test:
-    name: Lint & Test (Python ${{ matrix.python-version }})
+  lint_and_test:
     runs-on: ubuntu-latest
     strategy:
-      fail-fast: false
       matrix:
         python-version: ['3.11', '3.12', '3.13']
 
     steps:
       - uses: actions/checkout@v4
+
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
-          cache: pip
 
-      - name: Install libsodium-dev
-        run: sudo apt-get update && sudo apt-get install -y libsodium-dev
+      - name: Install system deps
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libsodium-dev
 
-      - name: Install dependencies
+      - name: Install Python deps
         run: |
           python -m pip install --upgrade pip
-          pip install --no-cache-dir --no-binary :all: pynacl
-          pip install ".[dev]"
+          pip install --no-cache-dir --no-binary :all: "pynacl>=1.5"
+          pip install .[test] "hypothesis>=6.104" "pytest-cov>=5.0" "coverage>=7.4"
 
-      - name: Lint
-        run: ruff check src tests && black --check src tests && mypy src
+      - name: Pre-commit
+        run: pre-commit run --all-files
 
-      - name: Unit tests
+      - name: Run pytest
         run: pytest --cov=src --cov-report=xml
-
-      - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v4
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}
-          fail_ci_if_error: true
-
-  trivy-scan:
-    name: Trivy SCA / CVE scan
-    runs-on: ubuntu-latest
-    needs: build-test
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Trivy scan (vuln only)
-        uses: aquasecurity/trivy-action@0.20.0
-        with:
-          scan-type: fs
-          scanners: vuln
-          ignore-unfixed: true
-          exit-code: '1'
