--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,34 +6,55 @@ on:
   pull_request:
     branches: [ main ]
 
+permissions:
+  contents: read
+
 jobs:
   lint_and_test:
     runs-on: ubuntu-latest
+    timeout-minutes: 15
+
     strategy:
+      fail-fast: false
       matrix:
-        python-version: ['3.11', '3.12', '3.13']
+        python-version: [ "3.11", "3.12", "3.13" ]
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
 
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
+          cache: pip
 
+      # ───────────────────────── system deps (libsodium) ──────────────────────────
       - name: Install system deps
         run: |
           sudo apt-get update
           sudo apt-get install -y libsodium-dev
 
+      # ───────────────────────── python deps (project + tests) ────────────────────
       - name: Install Python deps
         run: |
           python -m pip install --upgrade pip
-          pip install --no-cache-dir --no-binary :all: "pynacl>=1.5"
-          pip install .[test] "hypothesis>=6.104" "pytest-cov>=5.0" "coverage>=7.4"
+          # PyNaCl нужен из исходников, чтобы слинковаться c libsodium
+          pip install --no-binary :all: "pynacl>=1.5"
+          # проект с dev-экстрами и тест-инструменты
+          pip install -e .[dev] \
+                      "hypothesis>=6.104" \
+                      "pytest-cov>=5.0" \
+                      "coverage>=7.4"
 
+      # ───────────────────────── вспомогательные CLI-утилиты ──────────────────────
+      - name: Extra tools
+        run: pip install pre-commit tabulate
+
+      # ───────────────────────── линтеры / форматирование ────────────────────────
       - name: Pre-commit
         run: pre-commit run --all-files
 
+      # ───────────────────────── тесты + покрытие  ───────────────────────────────
       - name: Run pytest
         run: pytest --cov=src --cov-report=xml
