--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,5 @@
+# pyproject.toml
+
 # SPDX-License-Identifier: MIT
 # SPDX-FileCopyrightText: 2025 Zilant Prime Core contributors
 
@@ -23,22 +25,24 @@ classifiers     = [
   "Typing :: Typed",
 ]
 
+# Основные зависимости, необходимые для работы проекта
 dependencies = [
-  "cryptography>=38.0.4,<43.0",
   "argon2-cffi>=23.1,<24.0",
-  "click>=8.1,<9.0",
-  "hvac>=2.3,<3.0",
-  "flask>=2.2,<3.0",
-  "prometheus-client>=0.16.0,<1.0",
-  "shamir>=0.1",
-  "pynacl>=1.5,<2.0",
   "boto3>=1.28,<2.0",
+  "click>=8.1,<9.0",
+  "cryptography>=38.0.4,<43.0",
+  "flask>=2.2,<3.0",
+  "hvac>=2.3,<3.0",
+  "prometheus-client>=0.16.0,<1.0",
+  "psutil>=5.9.0",
+  "pynacl>=1.5,<2.0",
   "PyQt5>=5.15,<6.0",
   "PyYAML>=6.0,<7.0",
-  "zstandard>=0.23.0",
-  "tqdm>=4.66.0",
-  "psutil>=5.9.0",
   "requests>=2.32,<3.0",
+  "shamir>=0.1",
+  "tabulate>=0.9.0", # <-- ВОТ ОНО! Добавлено для CLI-вывода
+  "tqdm>=4.66.0",
+  "zstandard>=0.23.0",
 ]
 
 [project.scripts]
@@ -49,39 +53,40 @@ Homepage      = "https://github.com/QuantumKeyUYU/zilant-prime-core"
 Documentation = "https://github.com/QuantumKeyUYU/zilant-prime-core#readme"
 Issues        = "https://github.com/QuantumKeyUYU/zilant-prime-core/issues"
 
+# Дополнительные зависимости для разных сценариев (тесты, разработка и т.д.)
 [project.optional-dependencies]
 test = [
+  "filelock>=3.13,<4.0",
+  "hypothesis>=6.100,<7.0",
   "pytest>=8.0,<9.0",
   "pytest-cov>=5.0,<6.0",
   "pytest-timeout>=2.3,<3.0",
-  "hypothesis>=6.100,<7.0",
-  "filelock>=3.13,<4.0",
 ]
 dev = [
+  "atheris>=2.1; python_version < '3.12'",
+  "bandit>=1.7,<2.0",
   "black>=24.4,<25.0",
+  "build",
+  "cyclonedx-bom>=3.16,<7.0",
+  "filelock>=3.13,<4.0",
+  "hypothesis>=6.100,<7.0",
   "isort>=5.13,<6.0",
-  "ruff>=0.4,<0.5",
   "mypy>=1.10,<2.0",
   "pre-commit>=3.7,<4.0",
-  "types-hvac>=2.3.0.0",
-  "bandit>=1.7,<2.0",
-  "semgrep>=1.68,<2.0",
-  "cyclonedx-bom>=3.16,<7.0",
+  "psutil>=5.9.0",
+  "pyinstaller>=6.0",
   "pytest>=8.0,<9.0",
   "pytest-cov>=5.0,<6.0",
   "pytest-timeout>=2.3,<3.0",
-  "hypothesis>=6.100,<7.0",
-  "filelock>=3.13,<4.0",
-  "build",
-  "twine",
-  "atheris>=2.1; python_version < '3.12'",
-  "pyinstaller>=6.0",
-  "types-PyYAML>=6.0",
   "PyYAML>=6.0,<7.0",
-  "zstandard>=0.23.0",
-  "tqdm>=4.66.0",
-  "psutil>=5.9.0",
   "requests>=2.32,<3.0",
+  "ruff>=0.4,<0.5",
+  "semgrep>=1.68,<2.0",
+  "tqdm>=4.66.0",
+  "twine",
+  "types-hvac>=2.3.0.0",
+  "types-PyYAML>=6.0",
+  "zstandard>=0.23.0",
 ]
 pq = [
   "pqclean[kyber768]",
@@ -89,10 +94,10 @@ pq = [
   "oqs-python",
 ]
 docs = [
-  "sphinx>=7.2,<8.0",
   "furo>=2023.9",
-  "sphinx-autodoc-typehints>=1.25,<2.0",
   "m2r2",
+  "sphinx>=7.2,<8.0",
+  "sphinx-autodoc-typehints>=1.25,<2.0",
   "sphinxcontrib-mermaid",
 ]
 metrics = [
@@ -124,17 +129,12 @@ line_length       = 120
 known_first_party = ["zilant_prime_core"]
 known_standard_library = ["tomllib"]
 
-
-
+[tool.ruff]
+line-length = 120
 
 [tool.ruff.lint]
 select = ["E", "F", "W", "C90", "B"]
 ignore = ["E402", "B904", "C901"]
-
-
-
-[tool.ruff]
-line-length = 120
 
 [tool.lint]
 line-length = 120
